$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Add support for Czech UTF8
 - Fix bug [ 1830952 ] Cannot add events - Error, during execute Query
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Fix bug [ 1792313 ] Installation wizard step 1 shows wrong colors
 - Fix bug [ 1830446 ] Installation wizard will not be displayed in proper language
 - Fix bug [ 1829224 ] getPostVal fails on non-array
 - Fix bug [ 1827370 ] would not add multiple participants to event
 - Added ability to place page in more than one UAC 'page_lookup' group. We should be able to eliminate
   'page_lookup_ex' array eventually.
 - Fix bug [ 1828397 ] "you are not authorized" error
 - Fix bug [ 1828416 ] no pull-down entries for languages at 'preferences' and 'sys
 - Fix bug [ 1828232 ] Error after Login
 - Add capability to translate dates and numbers.
   In preparation for eliminating file 'includes/date_formats.php'.
 - Applied PATCH [1826466 ] update to translations/Italian.txt
 - Fixed bug [ 1826464 ] wrong default browser language
 - Applied PATCH [ 1813253 ] patch for upgrade-postgres.sql
 - Fixed bug [ 1818796 ] DbCachedir readable by any WebCal installation
 - Fixed bug [ 1819188 ] v1.1.6 SelectWeek problem
 - Added <blink></blink> login back into translate.php to aid in development
 - Cleaned up new Participant Selection
 - Fix bug [ 1819327 ] 1.1.6 Wrong "goto my calender" link, with own views
 - Fix bug [ 1811925 ] Participant selection needs improvement
   with related Patch [ 1816757 ] v1.1.6 PATCH to improve Participant Selection
 - Fix bug [ 1814377 ] 1.1.6 Week.php and repeats
 - Fix bug [ 1792322 ] wrong filled variables at installation wizard step 3
   ( PHP str_replace doesn't work right. )